# torchtraincpp-cifar10

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: get_cifar10.sh  run_cpu.sh
src/: main.cpp
src/data/: cifar10_dataset.cpp  cifar10_dataset.h
src/model/: simple_cnn.cpp  simple_cnn.h
src/train/: trainer.cpp  trainer.h
src/util/: checkpoint.cpp  checkpoint.h  csv_logger.cpp  csv_logger.h
